# PolyglotAPI

./: CMakeLists.txt  README.md  install_python.cmake  vcpkg.json
Source/Polyglot/: Engine.h  Node.cpp  Node.h
Source/Polyglot/Lua/: Conversion.cpp  Conversion.h  LuaEngine.cpp  LuaEngine.h
Source/Polyglot/Python/: Conversion.cpp  Conversion.h  PythonEngine.cpp  PythonEngine.h
Source/PolyglotAPI/: Node.cpp  Node.h  testmain.cpp
Source/PolyglotAPI/API/: API.cpp  API.h  APIFunction.cpp  APIFunction.h  FunctionRelay.h  TestFunctionRelay.cpp  TestFunctionRelay.h
Source/PolyglotAPI/Lua/: Conversion.cpp  Conversion.h  FunctionRelay.cpp  FunctionRelay.h  LuaEngine.cpp  LuaEngine.h
Source/PolyglotAPI/Python/: Conversion.cpp  Conversion.h  FunctionRelay.cpp  FunctionRelay.h  PythonEngine.cpp  PythonEngine.h
cmake/: sync_python.py
